--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="manifest" href="/manifest.webmanifest">
 
-    <title>ComicMaker</title>
+    <title>WhoMaker+</title>
 </head>
 <body>
 <div id="root"></div>
